--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               Email: yueyang1 [at] seas.upenn.edu<br><br>
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp; / &nbsp; <a href="https://github.com/YueYANG1996">GitHub</a> &nbsp; / &nbsp; <a href="linkedin.com/in/yue-yang-4b2075174">LinkedIn</a> &nbsp; / &nbsp; <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp; / &nbsp; <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp; / &nbsp; <a href="cv.pdf">CV</a>
             </td>
-            <td width="40%">
-              <img src="images/portrait.jpg" width="100%">
+            <td width="35%">
+              <img src="images/swing.gif" width="100%">
             </td>
           </tr>
           </table>
@@ -55,13 +55,13 @@
           <!-- Publications & Manuscripts -->
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
-              <td width="40%" valign="middle">
-                <heading>Publications & Manuscripts</heading>
+              <td width="30%" valign="middle">
+                <heading>Publications</heading>
               </td>
             </tr>
             <tr>
               <td width="30%">
-                <img src="images/IER.png" width="90%">
+                <img src="images/IER.png" width="100%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -85,7 +85,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/VGSI.png" width="90%">
+                <img src="images/VGSI.png" width="100%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -104,12 +104,151 @@
                   <a href="https://github.com/YueYANG1996/wikiHow-VGSI">github</a>
                 </div>
                 <div>
-                  TL;DR: This work proposes the Visual Goal-Step Inference (VGSI) task where a model is given a textual goal and must choose a plausible step towards that goal from among four candidate images.
+                  TL;DR: This work proposes the Visual Goal-Step Inference (VGSI) task where a model is given a textual goal and must choose a plausible step towards that goal from among four candidate images. We construct a VGSI dataset from wikiHow and show that SOTA multimodal models struggle on it. 
                 </div>
               </td>
             </tr>
 
+            <tr>
+              <td width="30%">
+                <img src="images/defog.gif" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/defog.pdf"><b>Optimization of the automotive air conditioning strategy based on the study of dewing phenomenon and defogging progress</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Yuqi Huang and Jisheng Zhao
+                </div>
+                <div class="venue">
+                  <i>Applied Thermal Engineering 169 (2020): 114932.</i>
+                </div>
+                <div class="tags">
+                  <a href="https://www.sciencedirect.com/science/article/pii/S1359431119360338">paper</a> / 
+                  <a href="bib/yang2020optimization.bib">bibtex</a>
+                </div>
+                <div>
+                  TL;DR: Numerically studied the dewing and defogging progress of a truck cabin; The external flow field was analyzed to get convective heat transfer coefficient; Effect of air velocity, temperature and humidity was considered and compared; Optimal control strategy of air conditioner was concluded based on these studies.
+                </div>
+              </td>
+            </tr>
 
+            <tr>
+              <td width="30%">
+                <img src="images/gap_flow.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/gap_flow.pdf"><b>Analysis on the influence of gap flow around a tractor-trailer</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Jinxing Chen, Yuqi Huang*, Jiangang Chen and Yuan Ji
+                </div>
+                <div class="venue">
+                  <i>13th International Conference on Heat Transfer, Fluid Mechanics and Thermodynamics</i>
+                </div>
+                <div class="tags">
+                  <a href="https://repository.up.ac.za/bitstream/handle/2263/62360/Yang_Analysis_2017.pdf?sequence=1">paper</a> / 
+                  <a href="bib/yang2017analysis.bib">bibtex </a>
+                </div>
+                <div>
+                  TL;DR: This paper aims to explore the optimum gap of tractor-trailers to reduce the aerodynamic drag by analyzing the mechanisms and laws of the flow which will decrease their energy consumption.
+                </div>
+              </td>
+            </tr>
+          </table>
+
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>Education</heading>
+              <table>
+                <tr>
+                  <td width="85%">
+                    <b>University of Pennsylvania</b>, Philadelphia, PA, USA<br>
+                    <li> Ph.D. in Computer and Information Science (2020 - present)</li>
+                    <li> M.S. in Robotics (2018 - 2020)</li>
+                  </td>
+                  <td width="15%">
+                    <img src="images/penn-logo.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  </td>
+                </tr>
+                <tr>
+                  <td width="85%">
+                    <b>Zhejiang University</b>, Hangzhou, China<br>
+                    <li> B.E. in Mechanical Engineering (2014 - 2018)</li>
+                  </td>
+                  <td width="15%">
+                    <img src="images/zju-logo.png" width="100%" style="display: flex; justify-content: center;">
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          </table>
+
+          <!-- Experience -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>Experiences</heading>
+              <table>
+                <tr>
+                  <td width="85%">
+                    <a href="https://ai.tencent.com/ailab/nlp/en/index.html"><b>Tencent AI Lab</b></a>, Seattle, WA, USA<br>
+                    <i>Research Scientist Intern</i> (May. 2022 to Sept. 2022)
+                  </td>
+                  <td width="15%">
+                    <img src="images/tencent-logo.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  </td>
+                </tr>
+
+                <tr>
+                  <td width="85%">
+                    <b>University of Pennsylvania & Coursera</b>, Philadelphia, PA, USA<br>
+                    <i>Associate Instructor</i> (Sept. 2020 to Sept. 2022)
+                  </td>
+                </tr>
+
+                 <tr>
+                  <td width="85%">
+                    <b>University of Pennsylvania & Coursera</b>, Philadelphia, PA, USA<br>
+                    <i>Research Assistant</i> (May. 2020 to present)
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          </table>
+
+          <!-- Teaching -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>Teaching</heading><br><br>
+              <strong>Head Teaching Assistant</strong>, <a href="https://artificial-intelligence-class.org/">CIS-521 Artificial Intelligence</a>, University of Pennsylvania<br>
+              Fall2019; Fall 2020; Summer 2021; Fall 2021; Spring 2022 <br> <br>
+              <strong>Teaching Assistant</strong>, <a href="http://markyatskar.com/cis530_sp2021/">CIS-530 Computational Linguistics</a>, University of Pennsylvania<br>
+              Spring 2021 <br>
+            </td>
+          </tr>
+          </table>
+
+          <!-- Talks -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>Talks</heading>
+              <table>
+                <tr>
+                  <td width="100%">
+                    <a href="https://ai.tencent.com/ailab/nlp/en/index.html"><b>CLUNCH</b></a>, University of Pennsylvania, Philadelphia, PA, USA<br>
+                    <i>Investigate Procedural Events in a Multimodal Fashion</i>, November 22, 2021. <a href="CLUNCH_talk.pptx">slides</a> 
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
           </table>
 
           <!-- Acknowledgements -->
