--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                  <tr>
                   <td width="85%">
-                    <b>University of Pennsylvania & Coursera</b>, Philadelphia, PA, USA<br>
+                    <b>University of Pennsylvania</b>, Philadelphia, PA, USA<br>
                     <i>Research Assistant</i> (May. 2020 to present)
                   </td>
                 </tr>
@@ -242,8 +242,8 @@
               <table>
                 <tr>
                   <td width="100%">
-                    <a href="https://ai.tencent.com/ailab/nlp/en/index.html"><b>CLUNCH</b></a>, University of Pennsylvania, Philadelphia, PA, USA<br>
-                    <i>Investigate Procedural Events in a Multimodal Fashion</i>, November 22, 2021. <a href="CLUNCH_talk.pptx">slides</a> 
+                    <a href="https://nlp.cis.upenn.edu/clunch.html"><b>CLUNCH</b></a>, University of Pennsylvania, Philadelphia, PA, USA<br>
+                    <i>Investigate Procedural Events in a Multimodal Fashion</i>, November 22, 2021. <a href="CLUNCH_talk.pdf">slides</a> 
                   </td>
                 </tr>
               </table>
