change hierarchy figure

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/hierarchy.png" width="100%">
+                <img src="images/h.gif" width="100%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
