upload hierarchy paper

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/IER.pdf"><b>Show Me More Details: Discovering Hierarchies of Procedures from Semi-structured Web Data</b></a>
+                  <a href="papers/hierarchy.pdf"><b>Show Me More Details: Discovering Hierarchies of Procedures from Semi-structured Web Data</b></a>
                 </div>
                 <div class="authors">
                     Shuyan Zhou, Harry Li Zhang, <strong>Yue Yang</strong>, Veronica Qing Lyu, Pengcheng Yin, Chris Callison-Burch, Graham Neubig
@@ -75,8 +75,8 @@
                    <i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2022
                 </div>
                 <div class="tags">
-                  <!-- <a href="https://arxiv.org/abs/2111.09276">arxiv</a> /
-                  <a href="bib/yang2021induce.bib">bibtex</a> -->
+                  <a href="https://arxiv.org/abs/2203.07264">arxiv</a> /
+                  <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
                   <a href="https://wikihow-trees.web.app/">website</a>
                 </div>
                 <div align="justify">
