--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
                 </div>
                 <div class="venue">
-                  <i>Preprint</i>, 2021
+                  <i>CVPR 2022 @ ODRUM</i>, 2021, spotlight talk
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2111.09276">arxiv</a> /
