--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2203.07264">arxiv</a> /
                   <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
-                  <a href="https://wikihow-trees.web.app/">website</a>
+                  <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a>
                 </div>
                 <div align="justify">
                   TL;DR: Procedures are inherently hierarchical. To "host a party", one may need to "clean the house", which in turn may require "putting away the clothes". We develop a simple and efficient method that links steps (e.g. "clean the house") in an article to other articles with similar intents (e.g. "how to deep lean your house"), which proceeds recursively to form the KB. 
