update research direction

--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
               <heading>About me</heading><br><br>
                 <p class="light">Hi! My name is Yue Yang (杨樾). I am a second-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
-                <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focuses on schema induction via multimodal information.
+                <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focuses on two directions to marry vision and language:
                 </p>
+                <ul>
+                  <li>Vision helps Language: Leverage visual knowledge to alleviate the reporting bias of language models.</li>
+                  <li>Language helps Vision: Language as intermediate, explict representation to improve explanability on vision tasks.</li>
+                </ul>
+                <img src="images/research_direction.png" width="80%">
                 <p>
                   Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD) during undergrads.
                 </p>
@@ -97,7 +102,7 @@
                     <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
                 </div>
                 <div class="venue">
-                  <i>CVPR 2022 @ ODRUM</i>, 2021, spotlight talk
+                  <i>CVPR 2022 @ ODRUM</i>, 2022, spotlight talk
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2111.09276">arxiv</a> /
