update emnlp 2022 papers

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>About me</heading><br><br>
-                <p class="light">Hi! My name is Yue Yang (杨樾). I am a second-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
+                <p class="light">Hi! My name is Yue Yang (杨樾). I am a third-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
                 <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focuses on two directions to marry vision and language:
                 </p>
@@ -62,6 +62,58 @@
             <tr>
               <td width="30%" valign="middle">
                 <heading>Publications</heading>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/zlavi.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/Z-LaVI.pdf"><b>Zero-Shot Language Solver Fueled by Visual Imagination</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Wenlin Yao, Hongming Zhang, Xiaoyang Wang, Dong Yu, Jianshu Chen
+                </div>
+                <div class="venue">
+                   <i>Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
+                </div>
+                <div class="tags">
+                  To appear.
+                  <!-- <a href="https://arxiv.org/abs/2203.07264">arxiv</a> / -->
+                  <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
+                  <!-- <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a> -->
+                </div>
+                <div align="justify">
+                  TL;DR: We develop a novel approach to endow language models with visual imagination capabilities. We leverage two complementary types of "imaginations": (I) recalling existing images through retrieval and (ii) synthesizing nonexistent images via text-to-image generation. Jointly exploiting the language inputs and the imagination, a pretrained vision-language model (e.g., CLIP) eventually composes a zero-shot solution to the original language tasks.
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/property.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/property.pdf"><b>Visualizing the Obvious: A Concreteness-based Ensemble Model for Noun Property Prediction</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>*, Artemis Panagopoulou*, Marianna Apidianaki, Mark Yatskar, Chris Callison-Burch
+                </div>
+                <div class="venue">
+                   <i>Findings of the Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
+                </div>
+                <div class="tags">
+                  To appear.
+                  <!-- <a href="https://arxiv.org/abs/2203.07264">arxiv</a> / -->
+                  <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
+                  <!-- <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a> -->
+                </div>
+                <div align="justify">
+                  TL;DR: This paper proposes a method for extracting properties of nouns from images, which can then be used to complement information from language models to mitigate the reporting bias problem. Results show that the proposed combination of text and images greatly improves noun property prediction compared to powerful text-based language models. 
+                </div>
               </td>
             </tr>
 
