--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/Z-LaVI.pdf"><b>Zero-Shot Language Solver Fueled by Visual Imagination</b></a>
+                  <a href="papers/Z-LaVI.pdf"><b>Z-LaVI: Zero-Shot Language Solver Fueled by Visual Imagination</b></a>
                 </div>
                 <div class="authors">
                     <strong>Yue Yang</strong>, Wenlin Yao, Hongming Zhang, Xiaoyang Wang, Dong Yu, Jianshu Chen
