change property image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   <a href="papers/property.pdf"><b>Visualizing the Obvious: A Concreteness-based Ensemble Model for Noun Property Prediction</b></a>
                 </div>
                 <div class="authors">
-                    <strong>Yue Yang</strong>*, Artemis Panagopoulou*, Marianna Apidianaki, Mark Yatskar, Chris Callison-Burch
+                    <strong>Yue Yang</strong>*, Artemis Panagopoulou*, Marianna Apidianaki, Mark Yatskar, Chris Callison-Burch (*equal contribution)
                 </div>
                 <div class="venue">
                    <i>Findings of the Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
