update arxiv and code of emnlp2022

--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
                    <i>Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
                 </div>
                 <div class="tags">
-                  To appear.
-                  <!-- <a href="https://arxiv.org/abs/2203.07264">arxiv</a> / -->
-                  <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
-                  <!-- <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a> -->
+                  <a href="https://arxiv.org/abs/2210.12261">arxiv</a> /
+                  <a href="https://github.com/YueYANG1996/Z-LaVI">code</a>
                 </div>
                 <div align="justify">
                   TL;DR: We develop a novel approach to endow language models with visual imagination capabilities. We leverage two complementary types of "imaginations": (I) recalling existing images through retrieval and (ii) synthesizing nonexistent images via text-to-image generation. Jointly exploiting the language inputs and the imagination, a pretrained vision-language model (e.g., CLIP) eventually composes a zero-shot solution to the original language tasks.
@@ -106,10 +104,8 @@
                    <i>Findings of the Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
                 </div>
                 <div class="tags">
-                  To appear.
-                  <!-- <a href="https://arxiv.org/abs/2203.07264">arxiv</a> / -->
-                  <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
-                  <!-- <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a> -->
+                  <a href="https://arxiv.org/abs/2210.12905">arxiv</a> /
+                  <a href="https://github.com/artemisp/semantic-norms">code</a>
                 </div>
                 <div align="justify">
                   TL;DR: This paper proposes a method for extracting properties of nouns from images, which can then be used to complement information from language models to mitigate the reporting bias problem. Results show that the proposed combination of text and images greatly improves noun property prediction compared to powerful text-based language models. 
@@ -133,6 +129,7 @@
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2203.07264">arxiv</a> /
+                  <a href="https://github.com/shuyanzhou/wikihow_hierarchy">github</a> /
                   <!-- <a href="bib/yang2021induce.bib">bibtex</a> -->
                   <a href="https://wikihow-hierarchy.github.io/?task_id=104796">website</a>
                 </div>
