--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@
 
             <tr>
               <td width="30%">
+                <img src="images/labo.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <b>Language in a Bottle: Language Model Guided Concept Bottlenecks for Interpretable Image Classification</b>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
+                </div>
+                <div class="venue">
+                   <i>Preprint</i>, 2022
+                </div>
+                <div align="justify">
+                  TL;DR: Concept Bottleneck Models are interpretable models that factor in human-readable concepts to explain model decisions. However, CBMs often under-perform their black box counterparts and require manual specification of concepts. Our method, LaBo, leverages large language models (GPT-3) to automatically construct bottlenecks for any image classification tasks.
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
                 <img src="images/zlavi.png" width="100%">
               </td>
               <td width="70%" valign="middle">
