update arxiv of labo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
   </head>
   <body>
-    <table width="800" border="0" align="center" cellspacing="0" cellpadding="0">
+    <table width="820" border="0" align="center" cellspacing="0" cellpadding="0">
       <tr>
         <td>
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -71,13 +71,16 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <b>Language in a Bottle: Language Model Guided Concept Bottlenecks for Interpretable Image Classification</b>
+                  <a href="papers/labo.pdf"><b>Language in a Bottle: Language Model Guided Concept Bottlenecks for Interpretable Image Classification</b></a>
                 </div>
                 <div class="authors">
                     <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
                 </div>
                 <div class="venue">
                    <i>Preprint</i>, 2022
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2211.11158">arxiv</a>
                 </div>
                 <div align="justify">
                   TL;DR: Concept Bottleneck Models are interpretable models that factor in human-readable concepts to explain model decisions. However, CBMs often under-perform their black box counterparts and require manual specification of concepts. Our method, LaBo, leverages large language models (GPT-3) to automatically construct bottlenecks for any image classification tasks.
