update publications and cv

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <td width="65%" valign="middle">
               <name>Yue Yang (杨樾)</name><br>
               pronounced as <i>yoo-eh</i><br><br>
-              Moore 103 (SIG Lab), 3300 Walnut St<br>Philadelphia, PA 19104, USA<br>
+              220 South 33rd Street, Towne 299<br>Philadelphia, PA 19104, USA<br>
               Email: yueyang1 [at] seas.upenn.edu<br><br>
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp; / &nbsp; <a href="https://github.com/YueYANG1996">GitHub</a> &nbsp; / &nbsp; <a href="https://www.linkedin.com/in/yue-yang-4b2075174">LinkedIn</a> &nbsp; / &nbsp; <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp; / &nbsp; <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp; / &nbsp; <a href="cv.pdf">CV</a>
             </td>
@@ -61,7 +61,7 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td width="30%" valign="middle">
-                <heading>Publications</heading>
+                <heading>Selected Publications</heading>
               </td>
             </tr>
 
@@ -212,6 +212,7 @@
               </td>
             </tr>
 
+            <!--
             <tr>
               <td width="30%">
                 <img src="images/defog.gif" width="100%">
@@ -235,7 +236,8 @@
                 </div>
               </td>
             </tr>
-
+            -->
+            <!--
             <tr>
               <td width="30%">
                 <img src="images/gap_flow.png" width="100%">
@@ -259,6 +261,7 @@
                 </div>
               </td>
             </tr>
+            -->
           </table>
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -298,6 +301,16 @@
               <table>
                 <tr>
                   <td width="85%">
+                    <a href="https://prior.allenai.org"><b>Allen Institute for AI</b></a>, Seattle, WA, USA<br>
+                    <i>Research Scientist Intern</i> (May. 2023 to Sept. 2023)
+                  </td>
+                  <td width="15%">
+                    <img src="images/ai2.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  </td>
+                </tr>
+
+                <tr>
+                  <td width="85%">
                     <a href="https://ai.tencent.com/ailab/nlp/en/index.html"><b>Tencent AI Lab</b></a>, Seattle, WA, USA<br>
                     <i>Research Scientist Intern</i> (May. 2022 to Sept. 2022)
                   </td>
@@ -305,7 +318,7 @@
                     <img src="images/tencent-logo.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
                 </tr>
-
+                <!--
                 <tr>
                   <td width="85%">
                     <b>University of Pennsylvania & Coursera</b>, Philadelphia, PA, USA<br>
@@ -319,6 +332,7 @@
                     <i>Research Assistant</i> (May. 2020 to present)
                   </td>
                 </tr>
+                -->
               </table>
             </td>
           </tr>
