--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <tr>
                   <td width="85%">
                     <a href="https://prior.allenai.org"><b>Allen Institute for AI</b></a>, Seattle, WA, USA<br>
-                    <i>Research Scientist Intern</i> (May. 2023 to Sept. 2023)
+                    <i>Research Intern</i> (May. 2023 to Sept. 2023)
                   </td>
                   <td width="15%">
                     <img src="images/ai2.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
