--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td width="30%" valign="middle">
-                <heading>Selected Publications</heading>
+                <heading>Preprints</heading>
               </td>
             </tr>
 
@@ -84,6 +84,59 @@
                 </div>
                 <div align="justify">
                   TL;DR: Concept Bottleneck Models are interpretable models that factor in human-readable concepts to explain model decisions. However, CBMs often under-perform their black box counterparts and require manual specification of concepts. Our method, LaBo, leverages large language models (GPT-3) to automatically construct bottlenecks for any image classification tasks.
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%" style="text-align:center;">
+                <img src="images/metaphor.png" width="80%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/labo.pdf"><b>I Spy a Metaphor: Large Language Models and Diffusion Models Co-Create Visual Metaphors</b></a>
+                </div>
+                <div class="authors">
+                    Tuhin Chakrabarty, Arkady Saakyan, Olivia Winn, Artemis Panagopoulou, <strong>Yue Yang</strong>, Marianna Apidianaki, Smaranda Muresan
+                </div>
+                <div class="venue">
+                   <i>Preprint</i>, 2023
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2211.11158">link</a>
+                </div>
+                <div align="justify">
+                  TL;DR: We propose a method to generate visual metaphors from linguistic metaphors using a collaboration between Large Language Models (LLMs) and Diffusion Models. We use Instruct GPT-3 with Chain-of-Thought prompting to generate text that represents a visual elaboration of the linguistic metaphor, containing the implicit meaning and relevant objects, which is then used as input to the diffusion-based text-to-image models. We end up creating 6,476 visual metaphors and associated visual elaborations.
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%" valign="middle">
+                <heading>Selected Publications</heading>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%" style="text-align:center;">
+                <img src="images/crepe.png" width="80%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/Z-LaVI.pdf"><b>Causal Reasoning About Entities and Events in Procedural Texts</b></a>
+                </div>
+                <div class="authors">
+                    Li Zhang, Hainiu Xu, <strong>Yue Yang</strong>, Shuyan Zhou, Weiqiu You, Manni Arora, Chris Callison-Burch
+                </div>
+                <div class="venue">
+                   <i>Conference of the European Chapter of the ACL (<b>EACL</b>)</i>, 2023
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2210.12261">arxiv</a> /
+                  <!-- <a href="https://github.com/YueYANG1996/Z-LaVI">code</a> -->
+                </div>
+                <div align="justify">
+                  TL;DR: We introduces CREPE, a benchmark for causal reasoning about event plausibility based on entity states, it shows that current large language models including GPT-3 perform poorly on this task. To improve the performance, we inject the causal relations between entities and events through structured representations such as programming languages which results in a significant improvement in performance.
                 </div>
               </td>
             </tr>
@@ -131,7 +184,7 @@
                   <a href="https://github.com/artemisp/semantic-norms">code</a>
                 </div>
                 <div align="justify">
-                  TL;DR: This paper proposes a method for extracting properties of nouns from images, which can then be used to complement information from language models to mitigate the reporting bias problem. Results show that the proposed combination of text and images greatly improves noun property prediction compared to powerful text-based language models. 
+                  TL;DR: We propose to extract properties of nouns from images, which can then be used to complement information from language models to mitigate the reporting bias problem. Results show that the proposed combination of text and images greatly improves noun property prediction compared to powerful text-based language models. 
                 </div>
               </td>
             </tr>
