--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <tr>
               <td width="30%" style="text-align:center;">
-                <img src="images/metaphor.png" width="80%">
+                <img src="images/metaphor.jpg" width="80%">
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -123,7 +123,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/Z-LaVI.pdf"><b>Causal Reasoning About Entities and Events in Procedural Texts</b></a>
+                  <a href="papers/crepe.pdf"><b>Causal Reasoning About Entities and Events in Procedural Texts</b></a>
                 </div>
                 <div class="authors">
                     Li Zhang, Hainiu Xu, <strong>Yue Yang</strong>, Shuyan Zhou, Weiqiu You, Manni Arora, Chris Callison-Burch
@@ -132,8 +132,8 @@
                    <i>Conference of the European Chapter of the ACL (<b>EACL</b>)</i>, 2023
                 </div>
                 <div class="tags">
-                  <a href="https://arxiv.org/abs/2210.12261">arxiv</a> /
-                  <!-- <a href="https://github.com/YueYANG1996/Z-LaVI">code</a> -->
+                  <a href="https://arxiv.org/abs/2301.10896">arxiv</a> /
+                  <a href="https://github.com/zharry29/causal_reasoning_of_entities_and_events">code</a>
                 </div>
                 <div align="justify">
                   TL;DR: We introduces CREPE, a benchmark for causal reasoning about event plausibility based on entity states, it shows that current large language models including GPT-3 perform poorly on this task. To improve the performance, we inject the causal relations between entities and events through structured representations such as programming languages which results in a significant improvement in performance.
