--- a/index.html
+++ b/index.html
@@ -61,32 +61,10 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td width="30%" valign="middle">
-                <heading>Preprints</heading>
+                <heading>Preprint</heading>
               </td>
             </tr>
 
-            <tr>
-              <td width="30%">
-                <img src="images/labo.png" width="100%">
-              </td>
-              <td width="70%" valign="middle">
-                <div class="title">
-                  <a href="papers/labo.pdf"><b>Language in a Bottle: Language Model Guided Concept Bottlenecks for Interpretable Image Classification</b></a>
-                </div>
-                <div class="authors">
-                    <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
-                </div>
-                <div class="venue">
-                   <i>Preprint</i>, 2022
-                </div>
-                <div class="tags">
-                  <a href="https://arxiv.org/abs/2211.11158">arxiv</a>
-                </div>
-                <div align="justify">
-                  TL;DR: Concept Bottleneck Models are interpretable models that factor in human-readable concepts to explain model decisions. However, CBMs often under-perform their black box counterparts and require manual specification of concepts. Our method, LaBo, leverages large language models (GPT-3) to automatically construct bottlenecks for any image classification tasks.
-                </div>
-              </td>
-            </tr>
 
             <tr>
               <td width="30%" style="text-align:center;">
@@ -118,6 +96,30 @@
             </tr>
 
             <tr>
+              <td width="30%">
+                <img src="images/labo.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/labo.pdf"><b>Language in a Bottle: Language Model Guided Concept Bottlenecks for Interpretable Image Classification</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
+                </div>
+                <div class="venue">
+                   <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2023
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2211.11158">arxiv</a> /
+                  <a href="https://github.com/YueYANG1996/LaBo">code</a>
+                </div>
+                <div align="justify">
+                  TL;DR: Concept Bottleneck Models are interpretable models that factor in human-readable concepts to explain model decisions. However, CBMs often under-perform their black box counterparts and require manual specification of concepts. Our method, LaBo, leverages large language models (GPT-3) to automatically construct bottlenecks for any image classification tasks.
+                </div>
+              </td>
+            </tr>
+
+            <tr>
               <td width="30%" style="text-align:center;">
                 <img src="images/crepe.png" width="80%">
               </td>
@@ -129,7 +131,7 @@
                     Li Zhang, Hainiu Xu, <strong>Yue Yang</strong>, Shuyan Zhou, Weiqiu You, Manni Arora, Chris Callison-Burch
                 </div>
                 <div class="venue">
-                   <i>Conference of the European Chapter of the ACL (<b>EACL</b>)</i>, 2023
+                   <i>Findings of the European Chapter of the ACL (<b>EACL</b>)</i>, 2023
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2301.10896">arxiv</a> /
