--- a/real-or-fake-news/index.html
+++ b/real-or-fake-news/index.html
@@ -59,8 +59,8 @@
         }
 
         .news img {
-            max-width: 100%;
-            max-height: 500px;
+            width: 600px;
+            height: auto;
             object-fit: contain;
         }
 
