--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td width="30%" valign="middle">
-                <heading>Preprint</heading>
+                <heading>Publications</heading>
               </td>
             </tr>
-
 
             <tr>
               <td width="30%" style="text-align:center;">
@@ -72,26 +71,20 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="papers/labo.pdf"><b>I Spy a Metaphor: Large Language Models and Diffusion Models Co-Create Visual Metaphors</b></a>
+                  <a href="https://openreview.net/forum?id=_2SBqIkiDW"><b>I Spy a Metaphor: Large Language Models and Diffusion Models Co-Create Visual Metaphors</b></a>
                 </div>
                 <div class="authors">
                     Tuhin Chakrabarty, Arkady Saakyan, Olivia Winn, Artemis Panagopoulou, <strong>Yue Yang</strong>, Marianna Apidianaki, Smaranda Muresan
                 </div>
                 <div class="venue">
-                   <i>Preprint</i>, 2023
+                   <i>Findings of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2023
                 </div>
                 <div class="tags">
-                  <a href="https://arxiv.org/abs/2211.11158">link</a>
+                  <a href="https://openreview.net/forum?id=_2SBqIkiDW">link</a>
                 </div>
                 <div align="justify">
                   TL;DR: We propose a method to generate visual metaphors from linguistic metaphors using a collaboration between Large Language Models (LLMs) and Diffusion Models. We use Instruct GPT-3 with Chain-of-Thought prompting to generate text that represents a visual elaboration of the linguistic metaphor, containing the implicit meaning and relevant objects, which is then used as input to the diffusion-based text-to-image models. We end up creating 6,476 visual metaphors and associated visual elaborations.
                 </div>
-              </td>
-            </tr>
-
-            <tr>
-              <td width="30%" valign="middle">
-                <heading>Selected Publications</heading>
               </td>
             </tr>
 
